tests/Rules/Forms/Fixtures/valid/div_textbox_with_label.html.twig
<div role="textbox" aria-label="Name"></div>
