tests/Rules/Forms/Fixtures/invalid/div_textbox_no_label.html.twig
{# 1 errors #}
<div role="textbox"></div>
